crates/vize_croquis/src/cross_file/snapshots/vize_croquis__cross_file__suppression__tests__missing_reason.snap
---
source: crates/vize_croquis/src/cross_file/suppression.rs
expression: map.errors
---
[
    SuppressionError {
        message: "@vize forget requires a reason. Use: // @vize forget: <reason>",
        line: 1,
        offset: 1,
    },
]
