crates/vize_croquis/src/cross_file/snapshots/vize_croquis__cross_file__suppression__tests__orphan_suppression.snap
---
source: crates/vize_croquis/src/cross_file/suppression.rs
expression: map.errors
---
[
    SuppressionError {
        message: "@vize forget at end of file - no code to suppress",
        line: 2,
        offset: 13,
    },
]
